--- a/index.html
+++ b/index.html
@@ -23,7 +23,41 @@
 
 </head>
 <body>
+    <header>
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-md navbar-light" style="background-color: none">
+                <a class="navbar-brand" href="#">Golden</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
 
+            <div class="splash">
+                <h3>Welcome To Our Studio</h3>
+                <h1>IT'S NICE RO MEET YOU</h1>
+                <button class="splash-button">TELL ME MORE</button>
+            </div>
+
+        </div>
+    </header>
 </body>
 
 </html>
