--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <body>
     <header>
         <div class="introdaktion">
-            <nav class="navbar navbar-dark">
-                <a class="navbar-brand" href="#">Golden</a>
+            <nav class="navbar navbar-expand-md navbar-dark">
+                <a class="navbar-brand" href="#" >Golden</a>
                 <button class="navbar-toggler" type="button"  data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav ">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
