--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -56,6 +57,31 @@
             </div>
         </div>
     </header>
+    <section class="services">
+        <div class="container">
+            <div class="services-title">
+                <h2>SERVICES</h2>
+                <h4>Proin iaculis purus consequat sem cure.</h4>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <i class="fa-solid fa-basket-shopping"></i>
+                    <h4 class="ser-item">E-Commerce</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur consectetur nibh et vehicula. Ut pretium mollis velit.</p>
+                </div>
+                <div class="col-4">
+                    <i class="fa-solid fa-laptop"></i>
+                    <h4 class="ser-item">Responsive Web</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur consectetur nibh et vehicula. Ut pretium mollis velit.</p>
+                </div>
+                <div class="col-4">
+                    <i class="fa-solid fa-lock"></i>
+                    <h4 class="ser-item">Web Security</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur consectetur nibh et vehicula. Ut pretium mollis velit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
