Add section Footer and basic styles

--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="foot-container">
+            <h4>Copyright 2014 FreebiesXpress.com</h4>
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i> </a></li>
+                <li><a href="#"><i class="fa-brands fa-facebook-f"></i> </a></li>
+                <li><a href="#"><i class="fa-brands fa-pinterest"></i> </a> </li>
+                <li><a href="#"><i class="fa-brands fa-google-plus"></i> </a> </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
