Add section Portfolio and basic styles, Add changes to Servicesstyles

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
                 <h4>Proin iaculis purus consequat sem cure.</h4>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <i class="fa-solid fa-basket-shopping"></i>
                     <h4 class="ser-item">E-Commerce</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur consectetur nibh et vehicula. Ut pretium mollis velit.</p>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <i class="fa-solid fa-laptop"></i>
                     <h4 class="ser-item">Responsive Web</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur consectetur nibh et vehicula. Ut pretium mollis velit.</p>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <i class="fa-solid fa-lock"></i>
                     <h4 class="ser-item">Web Security</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur consectetur nibh et vehicula. Ut pretium mollis velit.</p>
@@ -82,7 +82,56 @@
             </div>
         </div>
     </section>
-
+    <section class="portfolio">
+       <div class="container">
+            <h2>OUR PORTFOLIIO</h2>
+            <h4>Proin iaculis purus consequat sem cure.</h4>
+            <div class="card-group">
+                <div class="card">
+                    <img src="images/Portfolio_image_1.png" class="card-img-top" alt="Ebony & Ivory">
+                    <div class="card-body">
+                      <h5 class="card-title">Ebony & Ivory</h5>
+                      <p class="card-text">Branding</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/Portfolio_image_2.png" class="card-img-top" alt="Ebony & Ivory">
+                    <div class="card-body">
+                      <h5 class="card-title">Smart Stationary</h5>
+                      <p class="card-text">Print Design</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/Portfolio_image_3.png" class="card-img-top" alt="Ebony & Ivory">
+                    <div class="card-body">
+                      <h5 class="card-title">Clever Poster</h5>
+                      <p class="card-text">Print Design</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/Portfolio_image_4.png" class="card-img-top" alt="Ebony & Ivory">
+                    <div class="card-body">
+                      <h5 class="card-title">Vinyl Record</h5>
+                      <p class="card-text">Product Mock-up</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/Portfolio_image_5.png" class="card-img-top" alt="Ebony & Ivory">
+                    <div class="card-body">
+                      <h5 class="card-title">Treehouse Template</h5>
+                      <p class="card-text">Web Design</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/Portfolio_image_6.png" class="card-img-top" alt="Ebony & Ivory">
+                    <div class="card-body">
+                      <h5 class="card-title">Burned Logo</h5>
+                      <p class="card-text">Branding</p>
+                    </div>
+                </div>
+            </div>
+       </div> 
+    </section>
     <footer>
         <div class="foot-container">
             <h4>Copyright 2014 FreebiesXpress.com</h4>
