--- a/index.html
+++ b/index.html
@@ -84,17 +84,19 @@
     </section>
     <section class="portfolio">
        <div class="container">
-            <h2>OUR PORTFOLIIO</h2>
-            <h4>Proin iaculis purus consequat sem cure.</h4>
-            <div class="card-group">
-                <div class="card">
+            <div class="port-inner">
+                <h2>OUR PORTFOLIIO</h2>
+                <h4>Proin iaculis purus consequat sem cure.</h4>
+            </div>
+            <div class="row row-cols-1 row-cols-md-3">
+                <div class="card col-md-4">
                     <img src="images/Portfolio_image_1.png" class="card-img-top" alt="Ebony & Ivory">
                     <div class="card-body">
                       <h5 class="card-title">Ebony & Ivory</h5>
                       <p class="card-text">Branding</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-md-4">
                     <img src="images/Portfolio_image_2.png" class="card-img-top" alt="Ebony & Ivory">
                     <div class="card-body">
                       <h5 class="card-title">Smart Stationary</h5>
@@ -130,6 +132,7 @@
                     </div>
                 </div>
             </div>
+
        </div> 
     </section>
     <footer>
