--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
                 <h2>OUR PORTFOLIIO</h2>
                 <h4>Proin iaculis purus consequat sem cure.</h4>
             </div>
-            <div class="row row-cols-1 row-cols-md-3">
-                <div class="card col-md-4">
+            <div class="row row-cols-1 row-cols-md-4">
+                <div class="card ">
                     <img src="images/Portfolio_image_1.png" class="card-img-top" alt="Ebony & Ivory">
                     <div class="card-body">
                       <h5 class="card-title">Ebony & Ivory</h5>
                       <p class="card-text">Branding</p>
                     </div>
                 </div>
-                <div class="card col-md-4">
+                <div class="card ">
                     <img src="images/Portfolio_image_2.png" class="card-img-top" alt="Ebony & Ivory">
                     <div class="card-body">
                       <h5 class="card-title">Smart Stationary</h5>
